Solved problem of screen overflow using text-overflow property in css

--- a/base/_typography.scss
+++ b/base/_typography.scss
@@ -21,3 +21,8 @@
 .calc__btn--cancel {
   font-size: 22px;
 }
+
+.long {
+  font-size: 30px;
+  line-height: 100px;
+}
